Refactor and enhance FCL compilation and runtime functionality
- Updated DockerObjectCrashRecoveryIT to use new byte array methods for compiled FCL programs.
- Modified FclSystemFunctionsExternalIT to improve file removal methods and assertions for user validation.
- Enhanced PackageLifecycleExternalIT to support cache management in package data.
- Added tests in ProcessStatementExecutorTest for restoring legacy continuation formats.
- Improved ProgramServiceTest to ensure existing source identities are found before compilation.
- Updated PostgresLogicalExportIT to reflect schema version changes in metadata.
- Refined headless and host move scripts to include build version management.
- Introduced Version.sh for consistent version retrieval across build surfaces.
- Enhanced release scripts to validate and include versioning information.
- Updated Windows PowerShell script to initialize environment variables based on project version.